--- a/index.html
+++ b/index.html
@@ -19,16 +19,15 @@
     </style>
 </head>
 <body>
-    <h1>Aescape AI Voice Assistant</h1>
+    <h1>Aescape AI Table Bot</h1>
     
-    <p>Experience our AI voice bot designed to provide instant information about the Aescape robotic massage table and massage experience. Using advanced conversational AI, this assistant can answer your questions about our technology and unique massage experience.</p>
-    
-    <p>Our voice bot leverages natural language processing to understand your queries and provide clear, concise answers. Our AI is here to help you learn about our massage choices.</p>
+    <p>Talk to the table!</p>
+    <p></p>
+    <p></p>
     <h2>THIS BOT WORKS BEST ON GOOGLE CHROME 🙏🏽<h2>
-        <p>Other browsers in progress...</p>
-    <div class="widget-container">
-        <elevenlabs-convai agent-id="cPOwShr69m5hP49w2Rb9"></elevenlabs-convai>
-        <script src="https://elevenlabs.io/convai-widget/index.js" async></script>
+    <p>Other browsers in progress...</p>
+    <div>
+         <elevenlabs-convai agent-id="gsCl10v0GD7o59QmEvUH"></elevenlabs-convai><script src="https://elevenlabs.io/convai-widget/index.js" async type="text/javascript"></script>
     </div>
-</body>
+    </body>
 </html>
